updates to styles

--- a/Player/examples/shaka/style.css
+++ b/Player/examples/shaka/style.css
@@ -10,16 +10,62 @@ input {
     font-size: 0.75em;
 }
 
-.eventLog{
-    border:2px solid black;
-    width:95vw;
-    background: #000;
-    color:lightblue;
+.grid-container {
+    display: grid;
+    grid-template-columns: [gutter1] 1fr [main] 60vw [gutter2] 1fr[end];
+    grid-template-rows: [header]60px [video] auto [console]100px [manifest] 1fr [footer]1fr [end];
+    grid-template-areas:
+        'header header header'
+        'gutter1 video gutter2'
+        'gutter1 console gutter2'
+        'gutter1 manifest gutter2'
+        'footer footer footer';
+    justify-items: stretch;
+}
+
+#header {
+    grid-area: header;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.2em;
     font-weight: 400;
-    font-family: 'Consolas',monospace;
-    height:200px;
+}
+
+
+#videoArea {
+    grid-area: video;
+    background-color: rgb(32, 32, 32);
+    border-radius: 8px;
+    padding: 8px;
+}
+
+#video-container {
+    grid-area: video;
+    height: auto;
+    width: 100%;
+    overflow-x:hidden;
+}
+
+#console {
+    grid-area: console;
+    background-color: rgb(88, 88, 88);
+    border-radius: 5px;
+    margin-top: 10px;
+    padding-left: 5px;
+    height: auto;
     overflow-y: scroll;
-    padding-left: 10px;
+    color: lightblue;
+    font-weight: 400;
+    font-size: 0.75em;
+    font-family: 'Consolas', monospace;
+}
+
+#manifest {
+    grid-area: manifest;
+}
+
+#manifestUrl {
+    inline-size: 95%;
 }
 
 .metadata-show {
