--- a/Player/examples/hls-js/style.css
+++ b/Player/examples/hls-js/style.css
@@ -108,7 +108,7 @@ a:hover, a:active{
 .metadata-show {
     font-size: 1em;
     font-weight: 700;
-    position: absolute;
+    position: relative;
     padding-left: 10px;
     background-color: rgba(255, 255, 255, 1);
     width: 80%;
@@ -134,7 +134,7 @@ a:hover, a:active{
 .metadata-hide {
     font-size: 1em;
     font-weight: 700;
-    position: absolute;
+    position: relative;
     padding-left: 10px;
     width: 80%;
     opacity: 0;
